--- a/scene.yaml
+++ b/scene.yaml
@@ -93,28 +93,29 @@ layers:
                                 color: black
                                 width: 2px
         cities:
-            filter:
-                any:
-                    - { labelrank: {min: 5}, $zoom: { max: 6 }}
-                    - $zoom: { min: 6, max: 8 }
-                    - { population: { min: 100000 } , $zoom: {min: 8 } }
-                    - { population: { min: 50000 } , $zoom: {min: 12 } }
-                    - { not: { kind: [country, state] }, $zoom: {min: 14 } }
-            draw:
-                points:
-                    visible: global.labels
-                    priority: 2
-                    color: '#aaa'
-                    size: 8px
-                    text:
-                        optional: false
-                        font:
-                            size: function() {return 30 - feature.scalerank * 1 - (10 - $zoom)}
-                            family: Lucida Grande
-                            fill: white
-                            stroke:
-                                color: black
-                                width: 2px
+            filter: { not: { kind: [country, state] } }
+            also:
+                filter:
+                    any:
+                        - $zoom: { min: 6, max: 8 }
+                        - { labelrank: {min: 5}, $zoom: { max: 6 }}
+                        - { population: { min: 100000 } , $zoom: {min: 8 } }
+                        - { population: { min: 50000 } , $zoom: {min: 12 } }
+                draw:
+                    points:
+                        visible: global.labels
+                        priority: 2
+                        color: '#aaa'
+                        size: 8px
+                        text:
+                            optional: false
+                            font:
+                                size: function() {return 30 - feature.scalerank * 1 - (10 - $zoom)}
+                                family: Lucida Grande
+                                fill: white
+                                stroke:
+                                    color: black
+                                    width: 2px
         states:
             filter:
                 - kind: state
