--- a/scene.yaml
+++ b/scene.yaml
@@ -6,7 +6,7 @@ sources:
         rasters: [normals]
     normals:
         type: Raster
-        url: https://terrain-preview.mapzen.com/normal/{z}/{x}/{y}.png
+        url: https://tile.mapzen.com/mapzen/terrain/v1/normal/{z}/{x}/{y}.png?api_key=mapzen-QF1osLn
         max_zoom: 15
 
 scene:
