use simpler envmap function

--- a/scene.yaml
+++ b/scene.yaml
@@ -39,12 +39,7 @@ styles:
                 global: |
                     // Simplified view-independent environment map
                     vec4 applyEnvmap (in sampler2D _tex, in vec3 _normal) {
-                        const vec3 eye = vec3(0.,0.,-1.);
-                        vec3 r = reflect(eye, _normal);
-                        r.z += 1.0;
-                        float m = 2. * length(r);
-                        vec2 uv = r.xy / m + .5;
-                        return texture2D(_tex, uv);
+                        return texture2D(_tex, .5*(_normal.xy + 1.));
                     }
                 color: |
                     normal.z *= u_scale;
