fix normal reference

--- a/scene.yaml
+++ b/scene.yaml
@@ -39,7 +39,7 @@ styles:
                 global: |
                     // Simplified view-independent environment map
                     vec4 applyEnvmap (in sampler2D _tex, in vec3 _normal, in float scale) {
-                        normal.z *= scale;
+                        _normal.z *= scale;
                         return texture2D(_tex, .5*(normalize(_normal).xy + 1.));
                     }
                 color: |
