--- a/scene.yaml
+++ b/scene.yaml
@@ -3,14 +3,14 @@ sources:
         type: TopoJSON
         url: https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.topojson
         url_params:
-            api_key: YOUR-API-KEY
+            api_key: your-mapzen-api-key
         max_zoom: 16
         rasters: [normals]
     normals:
         type: Raster
         url: https://tile.mapzen.com/mapzen/terrain/v1/normal/{z}/{x}/{y}.png
         url_params:
-            api_key: YOUR-API-KEY
+            api_key: your-mapzen-api-key
         max_zoom: 15
 
 scene:
