--- a/scene.yaml
+++ b/scene.yaml
@@ -6,7 +6,8 @@ sources:
         rasters: [normals]
     normals:
         type: Raster
-        url: https://tile.mapzen.com/mapzen/terrain/v1/normal/{z}/{x}/{y}.png
+        # url: https://tile.mapzen.com/mapzen/terrain/v1/normal/{z}/{x}/{y}.png
+        url: https://s3.amazonaws.com/elevation-tiles-prod/normal/{z}/{x}/{y}.png
         max_zoom: 15
 
 scene:
