--- a/scene.yaml
+++ b/scene.yaml
@@ -1,12 +1,11 @@
 sources:
     mapzen: 
         type: TopoJSON
-        url: https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.topojson
-        max_zoom: 16
+        url: https://meetar.github.io/mapzen-tiles/vector/v1/256/all/{z}/{x}/{y}.topojson
+        max_zoom: 8
         rasters: [normals]
     normals:
         type: Raster
-        # url: https://tile.mapzen.com/mapzen/terrain/v1/normal/{z}/{x}/{y}.png
         url: https://s3.amazonaws.com/elevation-tiles-prod/normal/{z}/{x}/{y}.png
         max_zoom: 15
 
